# usefulcxx

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/crypto/: CMakeLists.txt  base64_example.cc
examples/util/: CMakeLists.txt  ResultExample.cc
patterns/: CMakeLists.txt
patterns/ConstexprClasses/: CMakeLists.txt  ConstexprClasses.cc
usefulcxx/: CMakeLists.txt
usefulcxx/crypto/: Base64.cc  Base64.h  CMakeLists.txt  Util.cc  Util.h
usefulcxx/util/: Result.h
